--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 body {
-  background-image:url('WhatsApp Image 2025-06-09 at 18.04.23_1f07a5c5.jpg');
+  background-image:url('BACKGROUND.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
